Fixed UI and solve bugs